Updates from Overleaf

--- a/cloudmask-report-format.tex
+++ b/cloudmask-report-format.tex
@@ -2,11 +2,13 @@
 \usepackage{textcomp}
 \usepackage{hyperref}
 %\usepackage[table]{xcolor}
-
-\usepackage{todonotes}
-\newcommand{\TODO}[1]{\todo[inline]{#1}}
-\newcommand{\NOTE}[1]{\textcolor{red}{[NOTE: #1]}}
-\newcommand{\FILE}[1]{\todo[inline,color=green!20]{File: #1}}
+% \usepackage[table]{xcolor}
+\usepackage{colortbl}
+\usepackage{MnSymbol}
+%\usepackage{todonotes}
+%\newcommand{\TODO}[1]{\todo[inline]{#1}}
+%\newcommand{\NOTE}[1]{\textcolor{red}{[NOTE: #1]}}
+%\newcommand{\FILE}[1]{\todo[inline,color=green!20]{File: #1}}
 
 \newcommand{\GITHUB}[1]{\todo[inline,color=green!20]{
 \href{https://github.com/laszewsk/mlcommons-uva/issues/#1}{GitHub Issue #1}}}
