--- a/vonLaszewski-cloudmask-related.bib
+++ b/vonLaszewski-cloudmask-related.bib
@@ -18,15 +18,6 @@
   year =	 2020
 }
 
-@misc{Sentinel84:online,
-  author =	 {{Sentinel-3}},
-  title =	 {Mission Summary},
-  howpublished = {Web Page},
-  url =
-                  {https://sentinels.copernicus.eu/web/sentinel/missions/sentinel-3/overview/mission-summary},
-  month =	 dec,
-  year =	 2023
-}
 
 @Article{amt-15-7195-2022,
   AUTHOR =	 {Petracca, I. and De Santis, D. and Picchiani, M. and
@@ -220,6 +211,7 @@
 }
 
 @misc{github-cloudmesh-ee,
+  author={von Laszewski, Gregor},
   title =	 {{Cloudmesh Experiment Executor Repository}},
   year =	 2022,
   month =	 oct,
@@ -242,7 +234,7 @@
   title =	 {Hybrid Reusable Computational Analytics Workflow
                   Management with Cloudmesh Applied to the MLCommons
                   Cloudmask Application},
-  author =	 {Gregor von Laszewski and J.P. Fleischer and
+  author =	 {von Laszewski, Gregor and J.P. Fleischer and
                   Geoffrey C. Fox and Juri Papay and Sam Jackson},
   year =	 2023,
   archivePrefix ={arXiv},
@@ -270,7 +262,7 @@
 }
 
 @misc{www-fair,
-  key =		 {fair},
+  author ={{Go Fair}},
   title =	 {FAIR Principles},
   howpublished = {Web Page},
   url =		 {https://www.go-fair.org/fair-principles/},
@@ -278,9 +270,9 @@
   year =	 2023
 }
 
-@article{cloudmesh-stopwatch,
+@misc{cloudmesh-stopwatch,
   author =	 {von Laszewski, Gregor},
-  journal =	 {GitHub},
+  howpublished =	 {GitHub},
   month =	 may,
   note =	 {[Accessed April 13, 2023]},
   title =	 {{Cloudmesh Common StopWatch}},
@@ -321,7 +313,10 @@
   url =
                   {https://proceedings.neurips.cc/paper_files/paper/2000/file/059fdcd96baeb75112f09fa1dcc740cc-Paper.pdf},
   volume =	 13,
-  year =	 2000
+  year =	 2000,
+  pages ={7},
+  month = may,
+  address = {Denver, CO, USA}
 }
 
 @article{Li2019DeepLB,
@@ -569,7 +564,7 @@
 }
 
 
-@online{www-mlcommons-science,
+@misc{www-mlcommons-science,
 author = {Fox, G. and Hey, T. and Thiyagalingam, J},
 title = {Science data working group of MLCommons research. Web Page.},
 url = {https://mlcommons.org/en/groups/research-science/},
@@ -578,8 +573,18 @@ year = 2023,
 urldate = {04/20/2023}
 }
 
-@online{www-sentinel92,
-author = {},
+@misc{Sentinel84:online,
+  author =	 {{Sentinel-3}},
+  title =	 {Mission Summary},
+  howpublished = {Web Page},
+  url =
+                  {https://sentinels.copernicus.eu/web/sentinel/missions/sentinel-3/overview/mission-summary},
+  month =	 dec,
+  year =	 2023
+}
+
+@misc{www-sentinel92,
+author = {{Sentinel Copernicus Operation}},
 title = {Sentinel-3 - Sentinel Online},
 url = {https://sentinels.copernicus.eu/web/sentinel/missions/sentinel-3},
 month = apr,
@@ -598,9 +603,9 @@ urldate = {04/20/2023}
 }
 
 @misc{www-slurm,
+  author = {{SchedMD}},
   journal =	 {Web page},
   key =		 {SLURM},
-  month =	 apr,
   howpublished = {Web page},
   url =		 {https://slurm.schedmd.com},
   title =	 {Homepage},
@@ -618,7 +623,7 @@ urldate = {04/20/2023}
   urldate =	 {04/20/2023}
 }
 
-@online{www-greene,
+@misc{www-greene,
 author = {{New York University}},
 title = {NYU Greene Supercomputer},
 url = {https://www.nyu.edu/life/information-technology/research-computing-services/high-performance-computing/high-performance-computing-nyu-it/hpc-supercomputer-clusters/greene.html},
