--- a/vonLaszewski-cloudmask-nyu.tex
+++ b/vonLaszewski-cloudmask-nyu.tex
@@ -434,7 +434,7 @@ In addition, we can leverage the cloudmesh compute coordination framework (cloud
  \resizebox{0.99\columnwidth}{!}{%
 \begin{tabular}{|p{3cm}||p{3cm}|p{3cm}|}
     \hline
-     \rowcolor{grey!10}{\bf Comparison}             & {\bf Batch script} &  {\bf cloudmesh-ee} \\
+     \rowcolor{gray!10}{\bf Comparison}             & {\bf Batch script} &  {\bf cloudmesh-ee} \\
      \hline
      \hline
      \GR Installation & \OK Easy as distributed with code as bash script & \OK Easy as distriuted with code thorugh pip install\\
