--- a/vonLaszewski-cloudmask-nyu.tex
+++ b/vonLaszewski-cloudmask-nyu.tex
@@ -19,9 +19,12 @@
 
 \begin{document}
 
+
+
 \newcommand{\TITLE}{MLCommons CloudMask Benchmark with Early Stoppage}
 
-\title{\TITLE}
+
+\title[\TITLE]{\TITLE \\ {\normalsize Version 1.0}}
 
 \author{Varshitha Chennamsetti}
 \affiliation{%
