format title better

--- a/vonLaszewski-cloudmask-nyu.tex
+++ b/vonLaszewski-cloudmask-nyu.tex
@@ -24,7 +24,7 @@
 \newcommand{\TITLE}{MLCommons CloudMask Benchmark with Early Stoppage}
 
 
-\title[\TITLE]{\TITLE \\ {\normalsize Version 1.0}}
+\title[\TITLE]{MLCommons CloudMask Benchmark \\with Early Stoppage \\ {\normalsize Version 1.0}}
 
 \author{Varshitha Chennamsetti}
 \affiliation{%
