chamge CloudMask to Cloudmask

--- a/vonLaszewski-cloudmask-nyu.tex
+++ b/vonLaszewski-cloudmask-nyu.tex
@@ -21,10 +21,10 @@
 
 
 
-\newcommand{\TITLE}{MLCommons CloudMask Benchmark with Early Stoppage}
+\newcommand{\TITLE}{MLCommons Cloudmask Benchmark with Early Stoppage}
 
 
-\title[\TITLE]{MLCommons CloudMask Benchmark \\with Early Stoppage \\ {\normalsize Version 1.0}}
+\title[\TITLE]{MLCommons Cloudmask Benchmark \\with Early Stoppage \\ {\normalsize Version 1.0}}
 
 \author{Varshitha Chennamsetti}
 \affiliation{%
