--- a/vonLaszewski-cloudmask-related.bib
+++ b/vonLaszewski-cloudmask-related.bib
@@ -3,8 +3,8 @@
   title =	 {An Overview of MLCommons Cloud Mask Benchmark: Related Research and Data},
   howpublished = {submitted to ArXiv, },
   url = {https://github.com/laszewski/papers/raw/master/vonLaszewski-cloudmask-related.pdf},
-  note={\url{https://arxiv.org/submit/5278659/view}},
-  month =	 may,
+  note={\url{https://arxiv.org/abs/2312.04799}, Dec., revised version from May, 2023},
+  month =	 dec,
   year =	 2023
 }
 
