--- a/vonLaszewski-cloudmask-nyu.tex
+++ b/vonLaszewski-cloudmask-nyu.tex
@@ -26,6 +26,9 @@
 
 \title[\TITLE]{MLCommons Cloud Masking Benchmark \\with Early Stopping \\ {\normalsize Version 1.0}}
 
+\titlenote{\url{https://github.com/laszewski/papers/raw/master/vonLaszewski-cloudmask-nyu.pdf}}
+
+
 \author{Varshitha Chennamsetti}
 \affiliation{%
   \institution{New York University}
