fix image names

--- a/vonLaszewski-cloudmask-nyu.tex
+++ b/vonLaszewski-cloudmask-nyu.tex
@@ -503,7 +503,7 @@ We also observed a large amount of variations as the server may be used in multi
 
 
 \begin{figure}[htb]
-\centering\includegraphics[width=1.0\columnwidth]{images/epoch_vs_loss (2).pdf}
+\centering\includegraphics[width=1.0\columnwidth]{images/epoch_vs_loss-2.pdf}
 \caption{Training and Validation Loss of Run 2 on NYU Greene.}
 \label{fig:Losses of Run 2}
 \end{figure}
@@ -553,7 +553,7 @@ We also observed a large amount of variations as the server may be used in multi
 \end{figure}
 
 \begin{figure}[ht]
-\centering\includegraphics[width=1.0\columnwidth]{images/epoch_vs_accuracy (2).pdf}
+\centering\includegraphics[width=1.0\columnwidth]{images/epoch_vs_accuracy-2.pdf}
 \caption{Training and Validation Accuracy of Run 2 on NYU Greene.}
 \label{fig:Accuracies of Run 2}
 \end{figure}
