--- a/vonLaszewski-cloudmask-nyu.tex
+++ b/vonLaszewski-cloudmask-nyu.tex
@@ -213,6 +213,7 @@ In this paper, we report work performed for MLCommons Science Working Group on t
 
 \clearpage
 
+\settopmatter{printfolios=true}
 \maketitle
 
 
