final check by NYU

--- a/vonLaszewski-cloudmask-nyu.tex
+++ b/vonLaszewski-cloudmask-nyu.tex
@@ -419,7 +419,7 @@ In an independent work conducted by Ruochen Gu, a version for Greene was develop
 The NYU team reused the cloudmesh YAML configuration contributed by the UVA and RAL team 
 that uses YAML files to initialize the hyperparameters for its experiments.
 The NYU team integrated this logic into a custom SLURM script to generate such YAML files 
-customarily, such that one file was sufficient to run all the given jobs in parallel, without having to run these jobs separately. Upon suggestion from UVA the NYU team also added the functionality for saving different models in different directories while the jobs are running in parallel given the same hyperparameter setup, such that no model overwriting can take place. As multiple jobs are executed from the same directory, careful management of filenames is integrated in the code. The jobs submitted to SLURM are managed as job arrays.
+customarily, such that one SLURM script was sufficient to run all the given jobs in parallel, instead of running these jobs separately. Upon suggestion from UVA, the NYU team also added the functionality for saving different models in different directories while the jobs are running in parallel given the same hyperparameter setup, such that no model overwriting can take place. As multiple jobs are executed from the same directory, careful management of filenames is integrated in the code. The jobs submitted to SLURM are managed as job arrays.
 
 \paragraph{Parallelization at UVA Rivanna} Using the cloudmesh experiment executor (cloudmesh-ee) the UVA team can conduct easily hyperparameter grid searches as well as execute them in a coordinated fashion on multiple supercomputers simultaneously \cite{las-2023-ai-workflow,github-cloudmesh-ee,las-2023-mlcommons-edu-eq}. Cloudmesh-ee creates easily reproducible runs and results following the FAIR principle. The usability of this tool has previously been shown also for other scientific applications. The software has been successfully utilized to manage long-running hyperparameter searches for the MLCommons earthquake forecasting. As this tool and its configuration files take care of utilizing separate directories for running the code and producing the output, no modification to the original code was needed other than switching to the updated YAML configuration files. In contrast to the NYU implementation, cloudmesh-ee enables the user to specify ranges for all hyperparameters in a single YAML configuration file. A single command line is used on the YAML file to generate an extensive hyperparameter search without modification of the program. Thus, instead of spending a significant amount of time generating various YAML files (as is the case for the NYU implementation), this is accomplished in seconds through cloudmesh-ee for all hyperparameters and not just a single one (e.g. epoch).
 
@@ -485,14 +485,14 @@ In addition, we can leverage the cloudmesh compute coordination framework (cloud
 
 \subsection{Results} 
 
-Using two different HPC systems, we now report selected performance (time per epoch) and scientific metrics (accuracy) results, while focusing mostly on data generated on NYU Greene.
+Using two different HPC systems, we now report selected performance (time per epoch) and scientific metrics (accuracy) results, while focusing mostly on results generated on NYU Greene.
 
-\paragraph{Results from NYU Greene} The NYU team trained the model for a total of 200 epochs with early stopping \cite{Caruana2000OverfittingIN} and a patience of 25 epochs. We chose 25 epochs as the patience since the loss curve for the validation set exhibits considerable fluctuation as shown in Figure \ref{fig:Validation loss}. The fluctuation on the training accuracy curve as well as the difficulty of training this model is suspected to be caused by the usage of Bayesian masks as the ground truth \cite{Thiyagalingam2022AIBF}. We use a learning rate of $1e-3$ with a batch size of $32$. The remaining hyperparameters such as the crop size, patch size, train test split, etc., are kept the same as those from the reference implementation. We ran each of our experiments $5$ times and report the average accuracy and training/inference times.
+\paragraph{Results from NYU Greene} The NYU team trained the model for a total of 200 epochs applying early stopping \cite{Caruana2000OverfittingIN} with a patience of 25 epochs. We chose 25 epochs as the patience since the loss curve for the validation set exhibits considerable fluctuation as shown in Figure \ref{fig:Validation loss}. The fluctuation on the validation loss curve is suspected to be caused by the usage of Bayesian masks as the ground truth \cite{Thiyagalingam2022AIBF}, as opposed to training on human annotated cloud masks. We use a learning rate of $1e-3$ with a batch size of $32$. The remaining hyperparameters such as the crop size, patch size, train test split, etc., are kept the same as those from the reference implementation. We ran each of our experiments $5$ times and report the average accuracy and time taken for training and inference.
 
 
 Table \ref{tab: Results} shows the results of our best model on both V100 and RTX8000 GPUs. Figure \ref{fig:Training loss} shows the training loss for the five runs on the same seed, and we see that run 2 performs the best with the least loss. We observed for this benchmark the best model weights at epoch 147, and an accuracy of 0.896 while using early stopping. The train and validation loss curve for run 2 is shown in Figure \ref{fig:Losses of Run 2}. The average inference accuracy achieved in 5 runs is 0.889.
 
-\paragraph{Comparative Results from UVA} While the results from NYU have been created using a shell script, the results from UVA have been created with the convenient cloudmesh-ee \cite{las-2023-ai-workflow,github-cloudmesh-ee}. We used cloudmesh-ee to create all results on UVA's Rivanna HPC. We added results obtained from NYU's Greene and show the comparative time consumption for a run with one epoch in Figure \ref{fig:epoch-compare}. We observe that the fastest machines are an NVIDIA station using the built-in raid followed by a custom build desktop with fast NVMe. 
+\paragraph{Comparative Results from UVA} While the results from NYU have been created using a shell script, the results from UVA have been created with the convenient cloudmesh-ee \cite{las-2023-ai-workflow,github-cloudmesh-ee}. We used cloudmesh-ee to create all results on UVA's Rivanna HPC. We added results obtained from NYU Greene and show the comparative time consumption for a run with one epoch in Figure \ref{fig:epoch-compare}. We observe that the fastest machine is an NVIDIA station using a built-in raid. 
 The second fastest machine is a custom-designed desktop with an RTX3090 and fast NVMe storage.
 The third fastest machine is an NVIDIA DGX node that is built into Rivanna while using the local NVMe storage. 
 Both Rivanna and Greene utilize a shared file storage system that slows down the capabilities of the GPU cards while not being able to keep up with the calculations. This is shown in Figure \ref{fig:epoch-compare} as all machines using non-local storage perform significantly slower.
@@ -568,12 +568,12 @@ We also observed a large amount of variations as the server may be used in multi
 \end{figure}
 
 
-\paragraph{Random seed on HPC systems} During the process of benchmarking we analyzed the initialization of the random number generators. Given the same seed for all runs that controls random numbers, we notice a variation of results in the different experiments. It is important to note that this is a documented feature when using GPUs and that a defined seed does not lead to number reproducibility. To be extra careful we have provided additional seed initializations for various Python libraries as documented in an earlier section.
+\paragraph{Random seed on HPC systems} During the process of benchmarking, we analyzed the initialization of the random number generators. Given the same seed for all runs that controls random numbers, we still notice a variation of results among different experiments. It is important to note that this is a documented feature when using GPUs and that a defined seed does not lead to number reproducibility. To be extra careful we have provided additional seed initializations for various Python libraries as documented in an earlier section.
 
 \section{Conclusion}
 
 In this paper, we describe our submission to MLCommons Science Cloud Masking Benchmark on two HPC systems: NYU Greene and UVA Rivanna. We also discuss, in particular, the differences between NYU and UVA team approaches in producing their benchmark results. We provide documented instructions on how to run the reference implementation on both systems for this benchmark.\footnote{Disclaimer: the documentation from NYU no longer works due to a system upgrade at NYU. A transition to Singularity from the NYU system staff was recommended. This has been independently worked on by Ruochen Gu. However, as the accounts on Greene expired, this work could not be completed and is therefore not documented in this paper. For the availability of portable code please contact G. von Laszewski.} 
-The NYU team contributed a modification to the code that integrates early stopping. In addition, the NYU team developed a bash script that replicates some features provided by cloudmesh-ee while the team explored the use of SLURMs job arrays feature. We report the best scientific metric obtained on NYU's HPC and the average time taken for an epoch for training and inference on a variety of machines. The code is available in the MLCommons Science Benchmark's GitHub repository.
+The NYU team contributed a modification to the code that integrates early stopping. In addition, the NYU team developed a bash script that replicates some features provided by cloudmesh-ee while the team explored the use of SLURMs job arrays feature. We report the best scientific metric obtained on NYU HPC Greene and the average time taken for training one epoch and inference on a variety of machines. The code is available in the MLCommons Science Benchmark's GitHub repository.
 
 
 % conlusion can not have refernces with all the artifacts mentioned in Section \ref{sec:exp}.
@@ -588,8 +588,8 @@ The NYU team contributed a modification to the code that integrates early stoppi
   Cyberinfrastructure for Sustained Innovation in Network Engineering
   and Science with the award number 2210266. The work from the UVA
   team was conducted at the Biocomplexity Institute at
-  the University of Virginia.  We like to thank the NYU AIFSR team for
-  their contributions. We especially like to thank Ruochen Gu who
+  the University of Virginia.  We would like to thank the NYU AIFSR team for
+  their contributions. We would especially like to thank Ruochen Gu who
   continued to work on this project on a voluntary basis.
 
 
